--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@ body *{
     font-family: 'Open Sans', sans-serif;
 }
 
-h1 {
+h1,h2,p {
     font-weight: 900;
+    text-align: center;
 }
 
 body {
