--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 body *{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Verdana', sans-serif;
 }
 
 h1 {
-    
-    text-align: center;
+    font-weight: 900;
 }
 
 body {
@@ -12,11 +11,10 @@ body {
 }
 
 .page {
-    width: 850px;
-    background-color: white;
+    width: 1000px;
+    background-color: PapayaWhip;
     margin: auto;
-    padding: 50px;
-    padding-top: 35px;
+    padding: 30px;
 }
 
 .vis-container {
@@ -24,11 +22,8 @@ body {
 }
 
 .description h2,
-h1,h2,p {
+h1 {
     margin-top: 0px;
-    text-align: center;
-}
-
 }
 
 .description-right {
