--- a/css/styles.css
+++ b/css/styles.css
@@ -4,22 +4,22 @@ body *{
 
 h1 {
     font-weight: 900;
-    font-size: 70px;
+    font-size: 60px;
 }
 
 h2 {
-    font-size: 35px;
+    font-size: 40px;
 }
 
 p {
-    font-size: 25px;
+    font-size: 20px;
     max-width: 45ch;
     margin: auto;
 }
 
 
 body {
-    background-color: lightgray;
+    background-color: PapayaWhip;
 }
 
 .page {
